// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infrastructure-levy-expected-date GET /change should render the infrastructure levy expected date change page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the expected levy adoption date change page if day is not valid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#">Date must include a day</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the expected levy adoption date change page if day is not valid 2`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#levy-expected-date-day">Date day must be a number</a>
                            </li>
                            <li><a href="#">Date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the expected levy adoption date change page if day is not valid 3`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#levy-expected-date-day">Date day must be between 1 and 31</a>
                            </li>
                            <li><a href="#">Date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the expected levy adoption date change page if day is not valid 4`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#levy-expected-date-day">Date day must be between 1 and 31</a>
                            </li>
                            <li><a href="#">Date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the expected levy adoption date change page with an error message if the provided date month is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#">Date must include a month</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the expected levy adoption date change page with an error message if the provided date month is invalid 2`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#levy-expected-date-month">Date month must be a number</a>
                            </li>
                            <li><a href="#">Date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the expected levy adoption date change page with an error message if the provided date month is invalid 3`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#levy-expected-date-month">Date month must be between 1 and 12</a>
                            </li>
                            <li><a href="#">Date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the expected levy adoption date change page with an error message if the provided date month is invalid 4`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#levy-expected-date-month">Date month must be between 1 and 12</a>
                            </li>
                            <li><a href="#">Date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the levy expected date change page with an error message if the provided date year is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#">Date must include a year</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the levy expected date change page with an error message if the provided date year is invalid 2`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#levy-expected-date-year">Date year must be a number</a>
                            </li>
                            <li><a href="#">Date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`infrastructure-levy-expected-date POST /change should re-render the levy expected date change page with an error message if the provided date year is invalid 3`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#levy-expected-date-year">Date year must be 4 digits</a>
                            </li>
                            <li><a href="#">Date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change expected levy adoption date</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-date-input" id="infrastructure-levy-expected-date">
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-day">Day</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-day" name="levy-expected-date-day"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-month">Month</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                                id="infrastructure-levy-expected-date-levy-expected-date-month" name="levy-expected-date-month"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                        <div class="govuk-date-input__item">
                            <div class="govuk-form-group">
                                <label class="govuk-label govuk-date-input__label" for="infrastructure-levy-expected-date-levy-expected-date-year">Year</label>
                                <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                                id="infrastructure-levy-expected-date-levy-expected-date-year" name="levy-expected-date-year"
                                type="text" inputmode="numeric">
                            </div>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
